# batchrename-pro

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: AGENTS.md
prompts/: dox-audit.md  release-check.md  repo-orientation.md
public/: AGENTS.md
scripts/: ci-local.sh  package-macos.sh
src/: AGENTS.md  App.tsx  index.css  types.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  db.rs  file_service.rs  main.rs  preview_service.rs  processing_pipeline.rs  types.rs
src-tauri/src/tests/: mod.rs
src/components/: ActionFooter.tsx  ConvertTab.tsx  DropZone.tsx  FileCard.tsx  FileList.tsx  MetadataTab.tsx  Navbar.tsx  RenameTab.tsx  TransformationPanel.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useTauriEvents.ts
src/lib/: commands.ts  events.ts
src/state/: AppStateContext.tsx
